--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,15 @@
 
     <h1>Hello World!</h1>
 
-    <input type="text" ng-model="hello">
+    <input type="text" ng-model="newTodo">
     <button class="btn btn-primary" ng-click="submitTodo()">Submit</button>
 
-    <ul ng-repeat="itodo incompleteTodos">
-        <li>{{ itodo.title }}<span ng-click="completeTodo(itodo)">[x]</span></li>
+    <ul ng-repeat="itodo in incompleteTodos">
+        <li>{{ itodo.title }}<a ng-click="completeTodo(itodo)">[complete]</a></li>
     </ul>
 
-    <ul ng-repeat="itodo completeTodos">
-        <li>{{ todo.title }}<span ng-click="removeTodo(todo)">[x]</span></li>
+    <ul ng-repeat="itodo in completeTodos">
+        <li>{{ itodo.title }}<a ng-click="removeTodo(itodo)">[x]</a></li>
     </ul>
 
 
